Fix ArticleInfo layout issue

--- a/src/component/molecule/ArticleInfo/ArticleInfo.scss
+++ b/src/component/molecule/ArticleInfo/ArticleInfo.scss
@@ -17,7 +17,7 @@
       height: 0.5rem;
       border-radius: 50%;
       background: currentColor;
-      margin: 0 0.125rem 0 0.5rem;
+      margin: 0 0.5rem;
     }
   }
 
